# tacplus-auth

./: COPYING  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  tacplus-auth.8  tacplus-auth.c  tacplus-restrict  tacplus-restrict.8
debian/: changelog  control  copyright  rules  tacplus-auth.manpages
